Removed base path.

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
   <title>Readrz.com</title>
   <meta name="description" content="">
 
-  <link rel="stylesheet" href="/readrz-stub/lib/bootstrap/3.3.4/css/bootstrap-darkly.min.css">
+  <link rel="stylesheet" href="/lib/bootstrap/3.3.4/css/bootstrap-darkly.min.css">
 
-  <link rel="canonical" href="http://www.readrz.com/readrz-stub/">
+  <link rel="canonical" href="http://www.readrz.com/">
 </head>
 
 
