--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: default
 
 <div class="jumbotron" style="margin-top: 2em">
   <h1>Readrz.com</h1>
-  <p>We regret to inform you that we stopped Readrz.</p>
+  <p>We regret to inform you that we've stopped Readrz.</p>
   <p>The website and all the services have been hybernated.</p>
   <p>Please visit the blog for more information.</p>
   <p><a class="btn btn-primary btn-lg" href="http://blog.readrz.com">Visit Readrz Blog</a></p>
